[gd_scene load_steps=7 format=3 uid="uid://ivhr8is035o1"]

[ext_resource type="Script" path="res://overworld/environment/goodsWagon/GoodsWagon.gd" id="1_851ud"]
[ext_resource type="Texture2D" uid="uid://d3vasu86qyc35" path="res://overworld/assets/tilemap.png" id="1_tobu8"]
[ext_resource type="Texture2D" uid="uid://bn4mr3v04b87c" path="res://overworld/environment/goodsWagon/Duck in Wagon2.png" id="4_b1cwv"]

[sub_resource type="Curve2D" id="Curve2D_7ic0j"]
resource_local_to_scene = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dxh0j"]
size = Vector2(12, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j1uv8"]
size = Vector2(12, 11)

[node name="GoodsWagon" type="Path2D"]
curve = SubResource("Curve2D_7ic0j")
script = ExtResource("1_851ud")

[node name="PathFollow2D" type="PathFollow2D" parent="."]

[node name="GoodsWagonBody" type="StaticBody2D" parent="PathFollow2D"]

[node name="SpriteWagon" type="Sprite2D" parent="PathFollow2D/GoodsWagonBody"]
texture = ExtResource("1_tobu8")
region_enabled = true
region_rect = Rect2(102, 68, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/GoodsWagonBody"]
shape = SubResource("RectangleShape2D_dxh0j")

[node name="SpriteDuck" type="Sprite2D" parent="PathFollow2D/GoodsWagonBody"]
visible = false
scale = Vector2(0.13, 0.13)
texture = ExtResource("4_b1cwv")

[node name="Area2D" type="Area2D" parent="PathFollow2D/GoodsWagonBody"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/GoodsWagonBody/Area2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_j1uv8")

[connection signal="body_entered" from="PathFollow2D/GoodsWagonBody/Area2D" to="PathFollow2D/GoodsWagonBody" method="_on_area_2d_body_entered"]
